tests/checker/diagnostics/0734_fcm_existential_escape_simple_08.ml.infer.expected
File "0734_fcm_existential_escape_simple_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0734_fcm_existential_escape_simple_08 is not a valid module name.

File "0734_fcm_existential_escape_simple_08.ml", line 8, characters 2-9:
8 |   M.value
      ^^^^^^^
Error: The value M.value has type M.t but an expression was expected of type
         'a
       The type constructor M.t would escape its scope
